ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: ec2-34-239-160-104.compute-1.amazonaws.com
    http:
      paths:
      - path: /myweb
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
